[project]
name = "arango-to-neo4j"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mitreattack-python>=4.0.2",
    "neo4j>=5.28.1",
    "neo4j-rust-ext>=5.28.1.0",
    "python-arango==5.4.0",
    "python-dotenv>=1.1.0",
]
